--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,36 @@
+# ======================
 # Django
-SECRET_KEY=****
-DEBUG=****
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+# ======================
+SECRET_KEY=your_django_secret_key_here
+DEBUG=True  # True для разработки, False для продакшена
 
-# PostgreSQL
-POSTGRES_DB=****
-POSTGRES_USER=****
-POSTGRES_PASSWORD=****
-POSTGRES_HOST=****
-POSTGRES_PORT=5432
+# ======================
+# Database (PostgreSQL)
+# ======================
+USE_POSTGRES=True
+DB_NAME=your_db_name_here
+DB_USER=your_db_user_here
+DB_PASSWORD=your_db_password_here
+DB_HOST=db1
+DB_PORT=5432
 
-# Redis
-REDIS_HOST=****
+# ======================
+# Email (Gmail example)
+# ======================
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_email_password
+DEFAULT_FROM_EMAIL=your_email@gmail.com
+
+# ======================
+# Redis (Celery broker & backend)
+# ======================
+REDIS_HOST=redis
 REDIS_PORT=6379
+
+# ======================
+# Ports (Docker)
+# ======================
+PORT=8000
+ADMINER_PORT=8080
+
+CORS_ALLOWED_ORIGINS=****
