--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,37 @@
 amqp==5.3.1
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.0
 asgiref==3.11.0
-authx==1.4.3
 billiard==4.2.4
-celery==5.6.2
-certifi==2025.11.12
-cffi==2.0.0
-charset-normalizer==3.4.4
+celery==5.6.1
 click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
-cron_descriptor==2.0.6
-cryptography==46.0.3
+decouple==0.0.7
 Django==5.2.9
-django-celery-beat==2.8.1
-django-phonenumber-field==8.4.0
-django-timezone-field==7.2.1
-dnspython==2.8.0
-ecdsa==0.19.1
-email-validator==2.3.0
-fastapi-cli==0.0.16
-fastapi-cloud-cli==0.7.0
-fastar==0.8.0
+django-cors-headers==4.9.0
+django-environ==0.12.0
+django-resized==1.0.3
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+drf-yasg==1.21.11
 gunicorn==23.0.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.7.1
-httpx==0.28.1
-idna==3.11
-itsdangerous==2.2.0
-Jinja2==3.1.6
+inflection==0.5.1
 kombu==5.6.2
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
 packaging==25.0
-phonenumbers==9.0.20
+pillow==12.1.0
 prompt_toolkit==3.0.52
-pyasn1==0.6.1
-pycparser==2.23
-pydantic==2.12.5
-pydantic-settings==2.12.0
-pydantic_core==2.41.5
-Pygments==2.19.2
+psycopg2-binary==2.9.11
 PyJWT==2.10.1
-python-crontab==3.3.0
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.2.1
-python-jose==3.5.0
-python-multipart==0.0.21
 pytz==2025.2
 PyYAML==6.0.3
-requests==2.32.5
-rich==14.2.0
-rich-toolkit==0.17.1
-rignore==0.7.6
-rsa==4.9.1
-sentry-sdk==2.48.0
-shellingham==1.5.4
+redis==6.4.0
 six==1.17.0
-sqlparse==0.5.4
-starlette==0.50.0
-typer==0.20.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
+sqlparse==0.5.5
 tzdata==2025.3
 tzlocal==5.3.1
-urllib3==2.6.2
-uvicorn==0.38.0
-uvloop==0.22.1
+uritemplate==4.2.0
 vine==5.1.0
-watchfiles==1.1.1
 wcwidth==0.2.14
-websockets==15.0.1
