--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
-decouple==0.0.7
+cron_descriptor==2.0.6
 Django==5.2.9
+django-celery-beat==2.8.1
 django-cors-headers==4.9.0
 django-environ==0.12.0
 django-resized==1.0.3
+django-timezone-field==7.2.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
@@ -22,6 +24,7 @@ pillow==12.1.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 PyJWT==2.10.1
+python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.2.1
@@ -30,6 +33,7 @@ PyYAML==6.0.3
 redis==6.4.0
 six==1.17.0
 sqlparse==0.5.5
+typing_extensions==4.15.0
 tzdata==2025.3
 tzlocal==5.3.1
 uritemplate==4.2.0
